src/snapshots/kk__test_type_check__unify_function_branches_3.snap
---
source: src/main.rs
expression: "type_check_source(\"\n            type Boolean = #true | #false\n            let result = \\\\(x: Boolean) => x.(\n                \\\\#true => 1\n                \\\\#false => 'yo'\n            )\n            \".trim().to_string())"
---
Err(
    UnifyError(
        FunctionReturnTypeMismatch {
            unify_error: TypeMismatch {
                location: Location {
                    source: NonFile {
                        env_name: "TESTING",
                    },
                    position: Position {
                        line_start: 3,
                        line_end: 3,
                        column_start: 17,
                        column_end: 31,
                    },
                },
                expected_type: Number,
                actual_type: String,
            },
            expected_function_type: FunctionType {
                arguments_types: [
                    Union(
                        UnionType {
                            tags: [
                                TagType {
                                    tagname: "#true",
                                    payload: None,
                                },
                                TagType {
                                    tagname: "#false",
                                    payload: None,
                                },
                            ],
                            bound: AtMost,
                            catch_all: false,
                        },
                    ),
                ],
                return_type: Number,
            },
            actual_function_type: FunctionType {
                arguments_types: [
                    Union(
                        UnionType {
                            tags: [
                                TagType {
                                    tagname: "#false",
                                    payload: None,
                                },
                            ],
                            bound: AtLeast,
                            catch_all: false,
                        },
                    ),
                ],
                return_type: String,
            },
            location: Location {
                source: NonFile {
                    env_name: "TESTING",
                },
                position: Position {
                    line_start: 3,
                    line_end: 3,
                    column_start: 17,
                    column_end: 31,
                },
            },
        },
    ),
)
